# flowforge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: user-story.md
src/: manage.py
src/core/: admin.py  models.py
src/core/migrations/: 0001_initial.py  0002_alter_equipment_activities.py  0003_alter_venue_name.py  0004_team_alter_activity_coachingpoints_and_more.py  0005_plan_plansection_plansectionitem.py  0006_plan_coach_qualification_required.py  0007_convert_coach_qualification_to_keys.py
src/flowforge/: asgi.py  settings.py  urls.py  wsgi.py
src/frontend/: urls.py  views.py
src/frontend/templates/frontend/: base.html  plan_detail.html
