[project]
name = "flowforge"
version = "0.1.0"
description = "A tool for planning MTB Coaching sessions"
authors = [
    {name = "Alasdair Cavaye",email = "nothanks@spam.org"}
]
license = {text = "GNU GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
